Edit align correct

--- a/src/containers/SessionDetails/SessionDetails.module.scss
+++ b/src/containers/SessionDetails/SessionDetails.module.scss
@@ -55,6 +55,7 @@
   gap: var(--gapXSmall);
   cursor: pointer;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .gridContainer {
